Segundo ejercicio html y css

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class = "background"></div>
+<div class= "content">
 
-  Capture and Share the World's Moments
+  <div class= "contenido">
+    <div class= "imagen">
+      <img src="images/phones.png" alt="Phones">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div>
+      <img src="images/brand.png" alt="Brand instagram">
+      <div class="backgroundWhite"><h1>Capture and Share<br> the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+      You can even share to Facebook,Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <img src="images/badge-android.png" alt="Phones">
+      <img src="images/badge-iPhone.png" alt="Phones">
+    </div>
+    </div>
+</div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+</footer>
+</div>
 </body>
 </html>
