--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue"></div>
 
-  Capture and Share the World's Moments
+  <div class="white"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="center">
+      <img src="images/phones.png" alt="Phones" class="phones">
+        <div class="logosytexto">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <img src="images/brand.png" alt="brand" class="brand">
 
-  Oh yeah, did we mention it's free?
+          <button type="submit" class="button"><img src="images/home.png" alt="home"> <b>Log in</b> </button>
+          <div class="fondoblanco">
+          <h1>Capture and Share the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+          <p>Oh yeah, did we mention it's free?</p> <br>
+
+          <a href="#"><img src="images/badge-iphone.png" alt="badge iphone" class="supports iphone"></a>
+          <a href="#"><img src="images/badge-android.png" alt="badge android" class="supports"></a>
+          </div>
+      </div>
+    </div>
+  <footer class="footer">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+
+  <p class="copyright">&copy; 2014 Instagram</p>
+
+  </footer>
 </body>
 </html>
