--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="bluebackground">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="container">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class=col1>
+    <img src="./images/phones.png" alt="phones">
+   </div>
 
-  Oh yeah, did we mention it's free?
+   <div class=col2>
+        <img class="image1" src="./images/brand.png" alt="phones">
+        <a class="button-1 image2" href='#'><img src="./images/home.png" alt="phones">   Log in</a>
+      <div class="container2">
+        <div class="content">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel,then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="botones"
+        <a class="link-btn2"href='#'><img src="./images/badge-iphone.png"></a>
+        <a class="link-btn2"href='#'><img src="./images/badge-android.png"></a>
+      </div>
+      </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+      <ul class="list-main">
+        <li class="list"><a class="link"href='#'>About Us</a></li>
+        <li class="list"><a class="link"href='#'>Support</a></li>
+        <li class="list"><a class="link"href='#'>Blog</a></li>
+        <li class="list"><a class="link"href='#'>Press</a></li>
+        <li class="list"><a class="link"href='#'>API</a></li>
+        <li class="list"><a class="link"href='#'>Jobs</a></li>
+        <li class="list"><a class="link"href='#'>Privacy</a></li>
+        <li class="list"><a class="link"href='#'>Terms</a></li>
+        <li class="list link">&copy; 2014 Instagram</li>
+      </ul>
+  </footer>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
