--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,62 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="bluehead">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="main">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="col-30">
+      <img src="./images/phones.png">
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="col-50">
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="head-50">
+        <div class="inline brand">
+          <img src="./images/brand.png">
+        </div>
+        <div class="inline">
+          <button class="login">
+            <img src="./images/home.png" alt="login">
+            <b>Log in</b>
+          </button>
+        </div>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="content-50">
+        <h1>Capture and Share<br> the World's Moments</h1>
 
-  &copy; 2014 Instagram
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div class="footer-50">
+        <img src="./images/badge-iphone.png">
+        <img src="./images/badge-android.png">
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="footer">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <p>&copy; 2014 Instagram</p>
+  </div>
 </body>
 </html>
