--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,80 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header class="header"></header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="body">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class= "wrapper">
 
-  Oh yeah, did we mention it's free?
+      <div class="wrapper-photo">
 
-  Download on the App Store
-  Get it on Google Play
+        <img src="images/phones.png" alt="phones photos">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div>
 
-  &copy; 2014 Instagram
+      <div class="wrapper-info">
+
+        <div class="brand">
+
+          <img src="images/brand.png" alt="logo">
+
+          <a href="https://www.instagram.com/?hl=es"><button type="button" class="lbutton">
+            <img src="images/home.png" alt="Login">
+            Log in
+          </button></a>
+
+        </div>
+
+        <div class="info">
+
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+
+          <div class="shop">
+
+            <a href="https://www.apple.com"> <img src="images/badge-iphone.png" alt="App store button"></a>
+            <a href="https://www.android.com/"> <img src="images/badge-android.png" alt="Google play button"></a>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+
+  <footer class="footer">
+
+    <nav>
+
+      <a href="#" class="fbutton" alt="about us">about us</a>
+      <a href="#" class="fbutton"alt="support">support</a>
+      <a href="#" class="fbutton"alt="blog">blog</a>
+      <a href="#" class="fbutton"alt="press">press</a>
+      <a href="#" class="fbutton"alt="api">api</a>
+      <a href="#" class="fbutton"alt="jobs">jobs</a>
+      <a href="#" class="fbutton"alt="privacy">privacy</a>
+      <a href="#" class="fbutton"alt="terms">terms</a>
+      <a href="#" class="cbutton"alt="copy">&copy;2014 instagram</a>
+
+    </nav>
+
+  </footer>
+
 </body>
 </html>
