Instagram clone finished

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <div class="img-container">
+      <img src="images/phones.png" alt="Iphone image">
+    </div>
+    <main class="info-container">
+      <header>
+        <img src="images/brand.png" alt="Instagram logo">
+        <button name="button">
+          <img class="home-icon" src="images/home.png" alt="home">
+          <span>Log in</span>
+        </button>
+      </header>
+      <div class="excerpt knockout-top-to-bottom">
+        <h1>Capture and Share <br>the World's Moments</h1>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="badges">
+        <img src="images/badge-iphone.png" alt="appstore logo">
+        <img src="images/badge-android.png" alt="playstore logo">
+      </div>
+    </main>
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <span>&copy; 2014 Instagram</span>
+    </ul>
+  </footer>
 </body>
 </html>
