--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
-<body>
+<div class="blue"></div>
+<div class="instaLogo">
+    <img src="./images/brand.png" alt="Instagram">
+</div>
+<div class="floating-box">
+<img src="./images/phones.png"> </img>
+</div>
+
   Instagram
 
   Capture and Share the World's Moments
@@ -17,15 +25,19 @@
   Download on the App Store
   Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+<div class="footer">
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+<li>Terms</li>
+</ul>
+</div>
   &copy; 2014 Instagram
+<div class="floating-box"></div>
 </body>
 </html>
