--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="./css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  Instagram
+  <div class = "blue">
+  <div class = "container">
 
-  Capture and Share the World's Moments
+    <div class = "left">
+      <img src = "./images/phones.png" alt = "iphone">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class = "right">
+      <div>
+        <div class = "instagram">
+        <h1><img src = "./images/brand.png" alt = "Instagram"></h1>
+      </div>
+        <div class = "login">
+        <button class = "button grad" type="button">
+          <img class = "image-button" src = "./images/home.png" alt = "home">Log in</button>
+      </div>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class = "text-right">
+        <div class = "text-right-inside">
+        <h2>Capture and Share <br>the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+          it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+        <div class= "images-button">
+        <img class = "image-margin" src = "./images/badge-iphone.png" alt = "Download on the App Store">
+        <img src = "./images/badge-android.png" alt = "Get it on Google Play">
+      </div>
+      </div>
+      </div>
+    </div>
+
+<ul class = "footer-links">
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li style="color:#D8D8D8";>&copy; 2014 Instagram</li>
+</ul>
+</div>
 </body>
 </html>
