first version instagram clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css" type="text/css"/>
 </head>
 <body>
-  Instagram
+  <div id="container">
+    <div class="back-color-frame"></div>
+    <div class="main">
+      <div class="wrapp">
+        <div class="phone-image">
+          <img src="images/phones.png" alt="phones image"></img>
+        </div>
+        <div class="content-right">
+          <div class="content-right-head">
+            <img src="images/brand.png" alt="brand image"></img>
+            <button><img src="images/home.png" alt="home image"></img> Log In</button>
+            <!--<input type="button" value="Log in">
+              <img src="images/home.png" alt="home image"></img>
+            </input>-->
+          </div>
+          <div class="content-data">
+            <h3>Capture and Share the World's Moments</h3>
+            <p>Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel,
+              then post to Instagram &mdash; it's that easy. You can even share to
+              Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="button-image">
+              <img src="images/badge-iphone.png" alt="badge iphone image"></img>
+              <img src="images/badge-android.png" alt="badge-android image"></img>
+            </div>
+          </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      </div>
+    </div>
+  </div>
+  <footer>
+    <ul class="footer-links">
+      <li><a href="#">About Us</li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+</div>
 </body>
 </html>
