lab-css-instagram-clone, entregado

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,67 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css"/>
+
 </head>
 <body>
-  Instagram
+  <div class="full-container">
+      <div class="header-background"></div>
+      <div class="container">
+        <div class="box-left">
+            <img src="images/phones.png">
+        </div>
 
-  Capture and Share the World's Moments
+        <div class="box-right">
+          <div class="title-div">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <div class="title">
+              <img src="images/brand.png">
+            </div>
+            <a href="#">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <div class="login-div_button">
+                <img src="images/home.png">
+                log in
 
-  Oh yeah, did we mention it's free?
+            </div>
+           </a>
+        </div>
+      <div class="text">
+        <h2 class="subtitle">Capture and Share the World's Moments</h2>
+        <p>
+        Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+        Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <div class="app-social">
+        <img src="images/badge-iphone.png"/>
+        <img src="images/badge-android.png"/>
+      </div>
+    </div> <!-- box right -->
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+       <div class="menu-footer">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </div>
 
-  &copy; 2014 Instagram
+
+  </div><!-- div container -->  
+</div><!-- div full-container -->
 </body>
 </html>
