--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="background1">
+  </div>
+  <div class="instagram">
+    <div class="column-left">
+      <img src="images/phones.png" alt="Phones" />
+    </div>
+    <div class="column-right">
+      <div class="header">
+        <h1><img src="images/brand.png" alt="Instagram-logo"/></h1>
+        <a href="#">
+            <button id= log-in><img src="images/home.png" alt="home"> Log in </button></a>
+      </div>
+      <div class="right-down">
+        <div class="capture">
+          <h2>Capture and Share the World's Moments</h2>
+        </div>
+        <div class="parrograph">
+          <p2> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p2>
+          <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p> Oh yeah, did we mention it's free?</p>
+          <div class="img3">
+            <button id="Download-AppStore" class="download" onclick="Download-AppStore"><img src="images/badge-iphone.png" /> </button>
+          </div>
+          <div class="img4">
+            <button id="GooglePlay" class="googleplay" onclick="GooglePlay"><img src="images/badge-android.png" /> </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul class="links">
+        <li class="bottom-links"><a href="#"><b> About Us </b> </a></li>
+        <li class="bottom-links"><a href="#"><b> Support </b></a></li>
+        <li class="bottom-links"><a href="#"><b> Blog </b></a></li>
+        <li class="bottom-links"><a href="#"><b> Press </b></a></li>
+        <li class="bottom-links"><a href="#"><b> API </b></a></li>
+        <li class="bottom-links"><a href="#"><b> Jobs </b></a></li>
+        <li class="bottom-links"><a href="#"><b> Privacy</b> </a></li>
+        <li class="bottom-links"><a href="#"><b> Terms </b></a></li>
+        <li class="bottom-links"> <p>&copy; 2014 Instagram</p> </li>
+      </ul>
+    </footer>
+  </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
