Instagram page Done, with box shadow complete and screenshot

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+  <title>Instagram Clone - Camila Maya</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="back-blue grad"></div>
+  <div class="container">
+    <section class="left inl-block">
+      <img src="images/phones.png" alt="">
+    </section>
+    <section class="right inl-block">
+      <header>
+        <h1><img src="images/brand.png" alt="Instagram"></h1>
+        <a class="home" href="#">
+        <button class="grad" type="button" name="button">
+          <img src="images/home.png" alt="Home">Log in</button>
+        </a>
+      </header>
+      <div class="content">
+        <h2>Capture and Share <br> the World's Moments</h2>
+        <p>Instagram is a <span>fast, beautiful</span> and<span> fun</span> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="stores">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>
+    </section>
+  </div>
+  <footer class="container">
+    <ul>
+      <li><a href="#aboutus">About us</a></li>
+      <li><a href="#support">Support</a></li>
+      <li><a href="#blog">Blog</a></li>
+      <li><a href="#press">Press</a></li>
+      <li><a href="#api">Api</a></li>
+      <li><a href="#jobs">Jobs</a></li>
+      <li><a href="#privacy">Privacy</a></li>
+      <li><a href="#terms">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
