--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,74 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-  Instagram
+  <div class="blue">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="main">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="relative">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+    <div class="phones">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="text">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="text-top">
+        <div class="instagram">
+          <p class="trans">Instagram</p>
+                    </div>
 
-  &copy; 2014 Instagram
+    <button type="button" name="login" class="login">
+
+          <img src="images/home.png" alt="home">
+          <p>Log in</p>
+        </button>
+      </div>
+
+        <div class="article">
+
+  <h3>Capture and Share <br> the World's Moments</h3>
+
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+  <p>Oh yeah, did we mention it's free?</p>
+
+<div class="blacks">
+
+  <button type="button" name="buttonA" class="button buttonA"></button>
+  <button type="button" name="buttonB" class="button buttonB"></button>
+
+  </div>
+
+  <img src="" alt="">
+
+    </div>
+</div>
+  </div>
+
+</div>
+  </div>
+
+<footer>
+<ul>
+
+  <li> <a href="#">About Us</a></li>
+  <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Jobs</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a></li>
+  <li>&copy; 2014 Instagram</li>
+  </ul>
+
 </body>
 </html>
