--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <!--Blue bar section-->
+  <div id="blueSection"></div>
+  <!--Container div-->
+  <div id="general">
+    <!--Left column-->
+    <div id="mobile" class="inline">
+      <img src="./images/phones.png" alt="Mobile-photo">
+    </div>
+    <!--Right column-->
+    <div id="centralBlock" class="inline">
+      <!--Instagram and log button-->
+      <div>
+        <img src="./images/brand.png" alt="Instagram">
+        <button><img src="./images/home.png" alt="home">Log in</button>
+      </div>
+      <!--Text-->
+      <div class="bg d2">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way
+          to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look
+          and feel, then post to Instagram &mdash; it's that easy. You can
+          even share to Facebook, Twitter, Tumblr and more. It's a new way
+          to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div>
+          <input class="botonApple" type="button">
+          <input class="botonAndroid" type="button">
+        </div>
+      </div>
+    </div>
+    <!--Footer-->
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="esp">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
