--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class=blue>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="img">
+    <img class="mobile" src="images/phones.png">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+    <div class="header">
+      <img class="instagram" src="images/brand.png">
+      <button class="login"><img src="images/home.png"> Log in </button>
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+    <div class="content">
+
+        <div class="title">
+          <h1>Capture and Share the World's Moments</h1>
+        </div>
+
+        <div class="text">
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+
+        <div class="buttons">
+          <input type="image" src="images/badge-iphone.png">
+          <input type="image" src="images/badge-android.png">
+        </div>
+    </div>
+
+
+    <footer class="about">
+        <a>About Us</a>
+        <a>Support</a>
+        <a>Blog</a>
+        <a>Press</a>
+        <a>API</a>
+        <a>Jobs</a>
+        <a>Privacy</a>
+        <a>Terms</a>
+        <a>&copy; 2014 Instagram</a>
+    </footer>
+
 </body>
 </html>
