--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel=Stylesheet href="css/main.css" type="text/css">
 </head>
 <body>
-  Instagram
+  <div class="background">
+  </div>
+  <div class="low">
+  </div>
+    <div class="container">
+      <div class="leftDiv">
+        <img src="images/phones.png" alt="phones">
+      </div>
+      <div class="rightDiv">
+        <div class="topRight">
+          <div class="brand">
+            <img src="images/brand.png" alt="brand">
+          </div>
+          <button type="button" class="homebutton">
+            <img class="homeimg" src="images/home.png" alt="home">
+            <h3>Log in<h3>
+          </button>
+        </div>
+        <div class="lowRight">
+          <div class="text">
+            <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram —it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <img class="branding" src="images/badge-iphone.png" alt="mac">
+          <img class="branding" src="images/badge-android.png" alt="android">
+        </div>
+      </div>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer>
+  <ul>
+  <li class="footerLink"><a class="link" href=# target="_blank">About Us</a></li>
+  <li class="footerLink"><a class="link" href=# target="_blank">Supports</li>
+  <li class="footerLink"><a class="link" href=# target="_blank">Blogs</li>
+  <li class="footerLink"><a class="link" href=# target="_blank">Presss</li>
+  <li class="footerLink"><a class="link" href=# target="_blank">APIs</li>
+  <li class="footerLink"><a class="link" href=# target="_blank">Jobss</li>
+  <li class="footerLink"><a class="link" href=# target="_blank">Privacys</li>
+  <li class="footerLink"><a class="link" href=# target="_blank">Termss</li>
+  <li class="footerLink"><a id="copyRight" href=# target="_blank">&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 </body>
 </html>
