lab-css-instagram-clone -- finished
subida la imagen del resultado de la maquetación y añadidos los enlaces al menu del footer

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -49,15 +49,15 @@
 
        <div class="menu-footer">
         <ul>
-          <li>About Us</li>
-          <li>Support</li>
-          <li>Blog</li>
-          <li>Press</li>
-          <li>API</li>
-          <li>Jobs</li>
-          <li>Privacy</li>
-          <li>Terms</li>
-          <li class="copyright">&copy; 2014 Instagram</li>
+          <li><a href="#">About Us</li></a>
+          <li><a href="#">Support</li></a>
+          <li><a href="#">Blog</li></a>
+          <li><a href="#">Press</li></a>
+          <li><a href="#">API</li></a>
+          <li><a href="#">Jobs</li></a>
+          <li><a href="#">Privacy</li></a>
+          <li><a href="#">Terms</li></a>
+          <li class="copyright">&copy; 2014 Instagram</li></a>
         </ul>
       </div>
 
