--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel = "stylesheet" href = "css/main.css"/>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class = "backgroundBlue">
+  </div>
+  <div class = "centralBlock">
+  <div class = "photoPhone">
+    <img src = "images/phones.png">
+  </div>
+  <div class = "cabecerayTexto">
+<div class = "instagramCabecera">
+  <img class = "instagramPhoto" src = "images/brand.png">
+  <div class = "imageBotton">
+  <button><img src= "images/home.png"><b class = "logIn">Log In</b></button>
+</div>
+</div>
+<div class = "text">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  Oh yeah, did we mention it's free?</p>
+  <img src = "images/badge-iphone.png">
+  <img src = "images/badge-android.png">
+</div>
+</div>
+</div>
+<div class = "footer">
+  <ul>
+  <li><a href = "#">About Us</a></li>
+  <li><a href = "#">Support</a></li>
+  <li><a href = "#">Blog</a></li>
+  <li><a href = "#">Press</a></li>
+  <li><a href = "#">API</a></li>
+  <li><a href = "#">Jobs</a></li>
+  <li><a href = "#">Privacy</a></li>
+  <li><a href = "#">Terms</a></li>
+  <li>&copy; 2014 Instagram</li>
+</ul>
+</div>
 </body>
 </html>
