--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="centerInside">
+      <div class="column1 dualColumn">
+        <img class="myPhone" src="images/phones.png" alt="Phones">
+      </div>
+      <div class="column2 dualColumn">
+        <div class="imageInstagram toTheLeft">
+          <img class="instagramIMG" src="images/brand.png" alt="Instagram - your photo's community">
+        </div>
+        <div class="buttonLogIn">
+          <a class="linklogin" href="#"><img class="homeIcon" src="images/home.png" alt="login">
+          <p class="login">Log in</p></a>
+        </div>
+        <div class="inner">
+          <div class="column2Inside">
+            <h2 class="toTheLeft">Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+            <p class="toTheLeft">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="images">
+              <a href="#"><img class="appIMG" src="images/badge-iphone.png" alt="Download on the App Store"></a>
+              <a href="#"><img class="googleIMG" src="images/badge-android.png" alt="Get it on Google Play"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="myFooter">
+        <ul class="footerList">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li class="grayLi">&#169; 2014 Instagram</li>
+        </ul>
+      </div>
+    </div>
+  </div> <!-- end container -->
 </body>
 </html>
