Web terminada y adapata al 100% de zoom, errores de v1 corregidos

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,49 +6,61 @@
 </head>
 <body>
 
-  <div class="bluehead">
+<div class="bluehead">
   </div>
 
-  <div class="main">
+<div class="content">
 
-    <div class="col-30">
-      <img src="./images/phones.png">
-    </div>
-
-    <div class="col-50">
-
-      <div class="head-50">
-        <div class="inline brand">
-          <img src="./images/brand.png">
-        </div>
-        <div class="inline">
-          <button class="login">
-            <img src="./images/home.png" alt="login">
-            <b>Log in</b>
-          </button>
-        </div>
-      </div>
-
-      <div class="content-50">
-        <h1>Capture and Share<br> the World's Moments</h1>
-
-        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
-
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-
-        <p>Oh yeah, did we mention it's free?</p>
-      </div>
-
-      <div class="footer-50">
-        <img src="./images/badge-iphone.png">
-        <img src="./images/badge-android.png">
-      </div>
-
-    </div>
-
+<div class="colmobile">
+    <img src="./images/phones.png">
   </div>
 
-  <div class="footer">
+<div class="colinfo">
+
+<div class="head">
+      <div class="headimage">
+        <img src="./images/brand.png">
+      </div>
+
+      <div class="headbutton">
+        <button class="button">
+          <img src="./images/home.png">
+          <p>Log in</p>
+        </button>
+      </div>
+    </div>
+
+<div class="middle">
+
+  <div class="text">
+
+    <h2>Capture and Share<br> the World's Moments</h2>
+
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+
+  </div>
+</div>
+
+<div class="bottom">
+  <div class ="iosand">
+    <img src="./images/badge-iphone.png">
+    <img src="./images/badge-android.png">
+  </div>
+</div>
+
+</div>
+
+</div>
+
+
+
+
+</div>
+
+<div class="footer">
+  <div class="options">
     <a href="#">About Us</a>
     <a href="#">Support</a>
     <a href="#">Blog</a>
@@ -59,5 +71,9 @@
     <a href="#">Terms</a>
     <p>&copy; 2014 Instagram</p>
   </div>
+</div>
+
+
+
 </body>
 </html>
