--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="blueBack">
 
-  Capture and Share the World's Moments
+  </div>
+  <div class="whiteBack">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </div>
+  <div class="father">
+    <div class="img">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div class="text">
+      <img src="images/brand.png" alt="">
+      <button class="home" type="button">
+        <img src="images/home.png" alt=""> Log in</button>
+      <div class="pictureBack">
+        <h2>Capture and Share
+          <br> the World's Moments</h2>
+        <p>is a
+          <b>fast, beautiful</b> and
+          <b>fun</b> way to share your life
+          <br> with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look
+          <br> and feel, then post to Instagram &mdash; it's that easy. You can
+          <br> even share to Facebook, Twitter, Tumblr and more. It's a
+          <br> new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <img class="android" src="images/badge-android.png" alt="">
+      <img class="iphone" src="images/badge-iphone.png" alt="">
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li>
+        <a href="#">About Us</a>
+      </li>
+      <li>
+        <a href="#">Support</a>
+      </li>
+      <li>
+        <a href="#">Blog</a>
+      </li>
+      <li>
+        <a href="#">Press</a>
+      </li>
+      <li>
+        <a href="#">API</a>
+      </li>
+      <li>
+        <a href="#">Jobs</a>
+      </li>
+      <li>
+        <a href="#">Privacy</a>
+      </li>
+      <li>
+        <a href="#">Terms</a>
+      </li>
+      <li>
+        &copy; 2014 Instagram
+      </li>
+    </ul>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </footer>
 </body>
+
 </html>
