--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class = "superior">
+  </div>
+  <div class = "contenido">
+    <div class = "telefono">
+      <img src = "images/phones.png" alt= "mobile phone">
+    </div>
+    <div class = "instagramIs">
+      <div class = "logo">
+        <img src = "images/brand.png" alt= "instagram logo">
+      </div>
+      <div class = "log">
+        <img src= "images/home.png" alt="icono home">
+        <a href="#">Log in</a>
+      </div>
+      <div class = "capture">
+        <h2>Capture and Share <br> the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b>
+        way to share your life with friends and family.
+        </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel,
+        then post to Instagram &mdash; it's that easy. You can even share to
+        Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class = "download">
+        <ul>
+          <li> <img src= "images/badge-iphone.png" alt="ios download"></li>
+          <li> <img src= "images/badge-android.png" alt="android download"></li>
+        </ul>
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li> <a class = "link" href="#">About Us</a></li>
+      <li> <a class = "link" href="#">Support</a></li>
+      <li> <a class = "link" href="#">Blog</a></li>
+      <li> <a class = "link" href="#">Press</a></li>
+      <li> <a class = "link" href="#">API</a></li>
+      <li> <a class = "link" href="#">Jobs</a></li>
+      <li> <a class = "link" href="#">Privacy</a></li>
+      <li> <a class = "link" href="#">Terms</a></li>
+      <li class = "copyRight">&copy; 2014 Instagram</li>
+    </ul>
+</footer>
 </body>
 </html>
