Box shadow finished.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,23 +18,25 @@
             <span>Log in</span>
           </a>
         </div>
-        <div class="content-info">
-            <h1>Capture and Share <br> the World's Moments</h1>
-            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
-            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-            <p>Oh yeah, did we mention it's free?</p>
-            <ul class="store-list">
-              <li class="store-item">
-                <a href="#" class="store-item-link">
-                  <img src="images/badge-iphone.png" alt="Apple Store Button">
-                </a>
-              </li>
-              <li class="store-item">
-                <a href="#" class="store-item-link">
-                  <img src="images/badge-android.png" alt="Apple Store Button">
-                </a>
-              </li>
-            </ul>
+        <div class="content-info-container">
+          <div class="content-info">
+              <h1>Capture and Share <br> the World's Moments</h1>
+              <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+              <ul class="store-list">
+                <li class="store-item">
+                  <a href="#" class="store-item-link">
+                    <img src="images/badge-iphone.png" alt="Apple Store Button">
+                  </a>
+                </li>
+                <li class="store-item">
+                  <a href="#" class="store-item-link">
+                    <img src="images/badge-android.png" alt="Apple Store Button">
+                  </a>
+                </li>
+              </ul>
+          </div>
         </div>
       </article>
 
