--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+    <div class="container">
+        <div class="flex-container">
+            <div class="left-side"></div>
+            <div class="right-side">
+                <div class="header">
+                    <img src="images/brand.png" class="brand" alt="Instagram">
+                    <button>
+                      <img src="images/home.png" class="btn-house-icon" alt="Home icon">
+                      <span class="btn-text">Log in</span>
+                    </button>
+                </div>
 
-  Capture and Share the World's Moments
+                <div class="frame">
+                    <img src="images/frame.png" alt="">
+                    <div class="frame-text">
+                        <h2>Capture and Share<br /> the World's Moments</h2>
+                        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                        <p>Oh yeah, did we mention it's free?</p>
+                        <img src="images/badge-iphone.png" alt="Download on the App Store">
+                        <img src="images/badge-android.png" alt="Get it on Google Play">
+                    </div>
+                </div>
+            </div>
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <div class="footer">
+            <ul class="list-inline">
+                <li>About Us</li>
+                <li>Support</li>
+                <li>Blog</li>
+                <li>Press</li>
+                <li>API</li>
+                <li>Jobs</li>
+                <li>Privacy</li>
+                <li>Terms</li>
+                <li class="font-grey">&copy; 2014 Instagram</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
