--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,9 +2,69 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="panel1">
+
+  </div>
+
+  <div class="panel2">
+    <div class="row">
+      <div class="column1">
+
+      </div>
+      <div class="column2">
+        <div class="column1-header">
+          <img class="img1" src="images/brand.png" width="350px">
+          <button class="btn">
+            <div id="btn_container">
+              <img  src="images/home.png" width="25" height="25"/>
+              <span class="btn-txt">Log in</span>
+            </div>
+          </button>
+        <!-- <img class="img2" src="images/brand.png" alt=""> -->
+
+        </div>
+        <div class="column1-info">
+           <h1>Capture and Share <br> the World's Moments</h1>
+           <p>
+           Instagram is a fast, beautiful and fun way to share your life <br>
+           with friends and family.<br><br>
+
+           Take a picture or video, choose a filter to transform its look <br>
+           and feel, then post to Instagram &mdash; it's that easy. You can <br>
+           even share to Facebook, Twitter, Tumblr and more. It's a <br>
+           new way to see the world.<br><br>
+
+           Oh yeah, did we mention it's free?</p>
+
+            <div class="badges">
+              <img src="images/badge-iphone.png" alt="">
+              <img src="images/badge-android.png" alt="">
+            </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><p id="copyright">&copy; 2014 Instagram</p></li>
+      </ul>
+
+    </div>
+  </div>
+
+  <!-- Instagram
 
   Capture and Share the World's Moments
 
@@ -26,6 +86,6 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
 </body>
 </html>
