--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,7 +30,7 @@
         <div class="column1-info">
            <h1>Capture and Share <br> the World's Moments</h1>
            <p>
-           Instagram is a fast, beautiful and fun way to share your life <br>
+           Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life <br>
            with friends and family.<br><br>
 
            Take a picture or video, choose a filter to transform its look <br>
